welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (n <- 1 to nums.length-1)
               ^